--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/compatible": "^1.1.2",
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.26.0",
+    "antd4": "npm:antd@^4.24.16",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
