feat: 添加 antd@3 兼容包

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/compatible": "^1.1.2",
+    "@ant-design/cssinjs": "1.23.0",
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.26.0",
     "antd4": "npm:antd@^4.24.16",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "rc-animate": "2.10.2",
+    "rc-form": "^2.4.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
