--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "rc-animate": "2.10.2",
     "rc-form": "^2.4.12",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
